feat: Introduce TypeScript entry point
Replaces the existing JavaScript entry point with a TypeScript file (`인덱스.tsx`) to leverage TypeScript for the application's main logic.

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 </head>
 <body class="safe-top">
     <div id="root"></div>
+    <script type="module" src="./인덱스.tsx"></script>
 </body>
 </html>
