--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 </head>
 <body class="safe-top">
     <div id="root"></div>
-    <script type="module" src="./인덱스.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
